// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers/settings.js should handle HAS_STARRED.SUCCESS 1`] = `
Immutable.Map {
  participating: false,
  playSound: true,
  showNotifications: true,
  markOnClick: false,
  openAtStartup: false,
  showSettingsModal: false,
  hasStarred: true,
  showAppIcon: "both",
}
`;

exports[`reducers/settings.js should handle HAS_STARRED.SUCCESS 2`] = `
Immutable.Map {
  participating: false,
  playSound: true,
  showNotifications: true,
  markOnClick: false,
  openAtStartup: false,
  showSettingsModal: false,
  hasStarred: false,
  showAppIcon: "both",
}
`;

exports[`reducers/settings.js should handle TOGGLE_SETTINGS_MODAL 1`] = `
Immutable.Map {
  participating: false,
  playSound: true,
  showNotifications: true,
  markOnClick: false,
  openAtStartup: false,
  showSettingsModal: true,
  hasStarred: false,
  showAppIcon: "both",
}
`;

exports[`reducers/settings.js should handle UPDATE_SETTING 1`] = `
Immutable.Map {
  participating: true,
  playSound: true,
  showNotifications: true,
  markOnClick: false,
  openAtStartup: false,
  showSettingsModal: false,
  hasStarred: false,
  showAppIcon: "both",
}
`;

exports[`reducers/settings.js should handle UPDATE_SETTING 2`] = `
Immutable.Map {
  participating: false,
  playSound: true,
  showNotifications: true,
  markOnClick: false,
  openAtStartup: true,
  showSettingsModal: false,
  hasStarred: false,
  showAppIcon: "both",
}
`;

exports[`reducers/settings.js should return the initial state 1`] = `
Immutable.Map {
  participating: false,
  playSound: true,
  showNotifications: true,
  markOnClick: false,
  openAtStartup: false,
  showSettingsModal: false,
  hasStarred: false,
  showAppIcon: "both",
}
`;
